--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <title>News homepage</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" media="screen and (max-width:768px)" href="mobile.css">
+  <link rel="stylesheet" media="screen and (min-width: 900px) and (max-width:1440px)"href="style.css">
+  <link rel="stylesheet" media="screen and (min-width:250px) and (max-width:900px)" href="mobile.css">
 </head>
 <body>
   <main>
@@ -14,76 +14,72 @@
       <div class="hamburger-menu">
         <img class="icon-menu" src="assets/images/icon-menu.svg" alt="icon-menu"> 
           <ul class="menu-items"> 
-            <li> Home  </li>
-            <li> Popular</li>
-            <li>Trending</li>
-            <li>Categories</li>
+            <li><a href="#"> Home </a> </li>
+            <li><a href="#"> Popular </a></li>
+            <li><a href="#">Trending </a></li>
+            <li><a href="#">Categories</a></li>
           </ul>
       </div>
     </nav>
-   
-    <section class="showcase-card">
-      <img class="background-image" src="assets/images/image-web-3-mobile.jpg" alt="background-image">
-      <h1>The Bright Future of Web 3.0? </h1>
-      <p> We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-        But is it really fulfilling its promise? </p>
-      <a class="primary-btn" href="#">Read more </a>
+
+    <div class="showcase">
+      <section class="showcase-card">
+        <img class="background-image" src="assets/images/image-web-3-mobile.jpg" alt="background-image">
+        <h1>The Bright Future of Web 3.0? </h1>
+        <p> We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+          But is it really fulfilling its promise? </p>
+        <a class="primary-btn" href="#">Read more </a>
+      </section>
+
+       <section class="news-card">
+        <h2>New</h2>
+        <article>
+          <h3>Hydrogen VS Electric Cars</h3>
+          <p>Will hydrogen-fueled cars ever catch up to EVs?  </p>
+        </article>
+
+        <article>
+          <h3>The Downsides of AI Artistry </h3>
+          <p>What are the possible adverse effects of on-demand AI image generation?</p>
+        </article>
+        <article>
+          <h3>Is VC Funding Drying Up?</h3>
+          <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+        </article>
+    </section>
+  
+    <section class="game-card">
+      <article>
+        <img src="assets/images/image-retro-pcs.jpg" alt="image-retro-pcs">
+        <div class="game-content">
+          <h2>01</h2>
+          <h3>Reviving Retro PCs</h3>
+          <p>What happens when old PCs are given modern upgrades?</p>
+        </div>
+      </article>
+
+      <article> 
+        <img src="assets/images/image-top-laptops.jpg" alt="image-top-laptops">
+        <div class="game-content">
+          <h2>02</h2>
+          <h3>Top 10 Laptops of 2022</h3>
+          <p>Our best picks for various needs and budgets.</p>
+        </div>
+      </article>
+
+      <article> 
+        <img src="assets/images/image-gaming-growth.jpg" alt="image-top-laptops">
+        <div class="game-content">
+          <h2>03</h2>
+          <h3>The Growth of Gaming</h3>
+          <p>How the pandemic has sparked fresh opportunities.</p>
+        </div>
+      </article>
+    
     </section>
 
-    <section class="news-card">
-      <h2>New</h2>
-      <article>
-        <h3>Hydrogen VS Electric Cars</h3>
-        <p>Will hydrogen-fueled cars ever catch up to EVs?  </p>
-      </article>
-
-      <article>
-        <h3>The Downsides of AI Artistry </h3>
-        <p>What are the possible adverse effects of on-demand AI image generation?</p>
-      </article>
-      <article>
-        <h3>Is VC Funding Drying Up?</h3>
-        <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
-      </article>
-  </section>
- 
-  <section class="game-card">
-    <article>
-      <img src="assets/images/image-retro-pcs.jpg" alt="image-retro-pcs">
-      <div class="game-content">
-        <h2>01</h2>
-        <h3>Reviving Retro PCs</h3>
-        <p>What happens when old PCs are given modern upgrades?</p>
-      </div>
-    </article>
-
-    <article> 
-      <img src="assets/images/image-top-laptops.jpg" alt="image-top-laptops">
-      <div class="game-content">
-        <h2>02</h2>
-        <h3>Top 10 Laptops of 2022</h3>
-        <p>Our best picks for various needs and budgets.</p>
-      </div>
-    </article>
-
-    <article> 
-      <img src="assets/images/image-gaming-growth.jpg" alt="image-top-laptops">
-      <div class="game-content">
-        <h2>03</h2>
-        <h3>The Growth of Gaming</h3>
-        <p>How the pandemic has sparked fresh opportunities.</p>
-      </div>
-    </article>
-   
-  </section>
- 
+    </div>
   </main>
 <script src="script.js"></script>
- 
-
-
-
-
-
 </body>
 </html>
